kubernetes/containous-delivery/blue-grean/native/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: green
 namespace: blue-green-app
spec:
  replicas: 0
  selector:
   matchLabels:
    app: green
  template:
   metadata:
    labels:
     app: green
   spec:
    containers:
    - name: green-app
      image:  regoo707/catalog-service:1.1.5
