kubernetes/containous-delivery/blue-grean/native/green-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: green-service
 labels:
  app: green
spec:
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
 selector:
   app: green
 type: ClusterIP
